--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -24,6 +24,8 @@
             android:layout_height="match_parent"
             android:layout_marginTop="20dp"
             android:background="@drawable/bg_top_round_white"
+            android:fillViewport="true"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +60,7 @@
                     android:background="@drawable/bg_back_btn"
                     android:drawableLeft="@drawable/ic_profile"
                     android:drawablePadding="20dp"
-                    android:hint="Name Of Event"
+                    android:hint="Enter Event Title"
                     android:inputType="textPersonName"
                     android:paddingStart="20dp"
                     android:textColor="@color/black"
@@ -108,7 +110,7 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
-                        <androidx.constraintlayout.widget.ConstraintLayout
+                        <LinearLayout
                             android:id="@+id/product_images"
                             android:layout_width="match_parent"
                             android:layout_height="80dp"
@@ -116,6 +118,8 @@
                             android:layout_marginTop="10dp"
                             android:layout_marginBottom="10dp"
                             android:background="@color/white"
+                            android:gravity="center"
+                            android:orientation="horizontal"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -125,11 +129,8 @@
                                 android:id="@+id/img1"
                                 android:layout_width="68dp"
                                 android:layout_height="68dp"
-                                android:layout_marginStart="5dp"
-                                android:background="@color/white"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent">
+                                android:layout_margin="5dp"
+                                android:background="@color/white">
 
                                 <ImageView
                                     android:id="@+id/first"
@@ -157,10 +158,7 @@
                                 android:id="@+id/img2"
                                 android:layout_width="68dp"
                                 android:layout_height="68dp"
-                                android:layout_marginStart="5dp"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintStart_toEndOf="@id/img1"
-                                app:layout_constraintTop_toTopOf="parent">
+                                android:layout_margin="5dp">
 
                                 <ImageView
                                     android:id="@+id/second"
@@ -188,10 +186,7 @@
                                 android:id="@+id/img3"
                                 android:layout_width="68dp"
                                 android:layout_height="68dp"
-                                android:layout_marginStart="5dp"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintStart_toEndOf="@id/img2"
-                                app:layout_constraintTop_toTopOf="parent">
+                                android:layout_margin="5dp">
 
                                 <ImageView
                                     android:id="@+id/third"
@@ -219,10 +214,7 @@
                                 android:id="@+id/img4"
                                 android:layout_width="68dp"
                                 android:layout_height="68dp"
-                                android:layout_marginStart="5dp"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintStart_toEndOf="@id/img3"
-                                app:layout_constraintTop_toTopOf="parent">
+                                android:layout_margin="5dp">
 
                                 <ImageView
                                     android:id="@+id/fourth"
@@ -246,7 +238,7 @@
 
                             </androidx.constraintlayout.widget.ConstraintLayout>
 
-                        </androidx.constraintlayout.widget.ConstraintLayout>
+                        </LinearLayout>
 
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -275,7 +267,7 @@
                     android:drawableLeft="@drawable/ic_location"
                     android:drawablePadding="20dp"
                     android:hint="Location Of Event"
-                    android:inputType="textPersonName"
+                    android:inputType="textPostalAddress"
                     android:paddingStart="20dp"
                     android:textColor="@color/black"
                     android:textColorHint="#80282729"
@@ -374,23 +366,41 @@
 
                 <HorizontalScrollView
                     android:id="@+id/scrollH"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="15dp"
                     android:layout_marginTop="7dp"
                     android:background="@drawable/bg_back_btn"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    android:fillViewport="true"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                    app:layout_constraintEnd_toStartOf="@+id/addMemberBtn"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/addMemberTv">
 
                     <LinearLayout
                         android:id="@+id/dynamicLl"
+
                         android:layout_width="match_parent"
-                        android:layout_height="100dp"
+                        android:layout_height="wrap_content"
                         android:orientation="horizontal"
+                        android:layout_marginVertical="10dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent" />
                 </HorizontalScrollView>
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/addMemberBtn"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginEnd="15dp"
+                    android:background="@drawable/bg_blue_corner"
+                    android:text="+"
+                    android:textColor="@color/mainColor"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@id/scrollH"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/scrollH" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/createBtn"
