--- a/app/src/main/res/layout/fragment_payslip.xml
+++ b/app/src/main/res/layout/fragment_payslip.xml
@@ -29,7 +29,7 @@
                 android:layout_height="118dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="20dp"
-                android:src="@drawable/img_add_employee"
+                android:src="@drawable/img_dp"
                 app:civ_border_color="@color/black"
                 app:civ_border_width="1dp"
                 app:layout_constraintStart_toStartOf="parent"
