--- a/app/src/main/res/layout/fragment_attendance.xml
+++ b/app/src/main/res/layout/fragment_attendance.xml
@@ -193,7 +193,7 @@
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/txtLeft"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
@@ -203,7 +203,7 @@
 
             <TextView
                 android:id="@+id/monthTv"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
@@ -214,7 +214,7 @@
                 android:textStyle="bold" />
 
             <androidx.appcompat.widget.AppCompatImageButton
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:id="@+id/txtRight"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
