--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -9,10 +9,10 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_marginTop="10dp"
-        android:orientation="vertical"
         android:fillViewport="true"
+        android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,9 +26,9 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/mainCard"
                 android:layout_width="match_parent"
-                android:layout_height="280dp"
+                android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="18dp"
                 app:cardCornerRadius="24dp"
                 app:cardElevation="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -41,8 +41,8 @@
 
                     <ImageView
                         android:id="@+id/damru"
-                        android:layout_width="75dp"
-                        android:layout_height="75dp"
+                        android:layout_width="73dp"
+                        android:layout_height="73dp"
                         android:layout_marginTop="5dp"
                         android:src="@drawable/img_damru"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -53,10 +53,10 @@
                         android:id="@+id/llTime"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        android:layout_marginVertical="5dp"
                         android:gravity="center"
                         android:orientation="horizontal"
-                        android:paddingVertical="6dp"
+                        android:paddingVertical="3dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/damru">
@@ -67,7 +67,7 @@
                             android:layout_margin="5dp"
                             app:cardCornerRadius="12dp"
 
-                            app:cardElevation="8dp">
+                            app:cardElevation="2dp">
 
 
                             <TextView
@@ -93,7 +93,7 @@
                             android:layout_height="40dp"
                             android:layout_margin="5dp"
                             app:cardCornerRadius="12dp"
-                            app:cardElevation="8dp">
+                            app:cardElevation="2dp">
 
                             <TextView
                                 android:id="@+id/minTv"
@@ -113,7 +113,7 @@
                             android:layout_height="40dp"
                             android:layout_margin="5dp"
                             app:cardCornerRadius="12dp"
-                            app:cardElevation="8dp">
+                            app:cardElevation="2dp">
 
                             <TextView
                                 android:id="@+id/secTv"
@@ -134,8 +134,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="25dp"
+                        android:layout_marginVertical="3dp"
                         app:cardCornerRadius="18dp"
-                        android:layout_marginTop="3dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/llTime">
@@ -145,7 +145,7 @@
                             android:layout_height="match_parent"
                             android:gravity="center"
                             android:paddingHorizontal="40dp"
-                            android:paddingVertical="16dp"
+                            android:paddingVertical="12dp"
                             android:text="10:00 AM to 07:00 PM"
                             android:textStyle="bold" />
 
@@ -155,9 +155,9 @@
                         android:id="@+id/llButtons"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginVertical="12dp"
                         android:gravity="center"
                         android:orientation="horizontal"
-
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -206,13 +206,13 @@
             <ImageButton
                 android:id="@+id/imageButton"
                 android:layout_width="36dp"
-                android:visibility="invisible"
                 android:layout_height="36dp"
-                android:clickable="false"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="15dp"
                 android:background="@drawable/bg_back_btn"
+                android:clickable="false"
                 android:src="@drawable/ic_calendar"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/mainCard" />
 
