--- a/app/src/main/res/layout/rv_event_layout.xml
+++ b/app/src/main/res/layout/rv_event_layout.xml
@@ -3,17 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_margin="3dp"
+    android:padding="1dp"
+    android:elevation="3dp"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
-        android:scaleType="centerCrop"
         android:layout_marginTop="6dp"
         android:background="@drawable/bg_img_bday"
+        android:scaleType="centerCrop"
         android:src="@drawable/img_birthday"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
