--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/nav_company_details"
         android:icon="@drawable/nav2"
-        android:title="Company Details" />
+        android:title="Employee Details" />
     <item
         android:id="@+id/nav_bank_details"
         android:icon="@drawable/nav3"
