--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -12,6 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/txtGray"
         android:layout_marginTop="20dp"
         android:background="@drawable/bg_searchview"
         android:drawableStart="@drawable/ic_search"
