--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -37,7 +37,8 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:background="@color/white">
 
                     <ImageView
                         android:id="@+id/damru"
@@ -77,8 +78,8 @@
                                 android:background="@drawable/digital_clock_bg"
                                 android:gravity="center"
                                 android:text="00"
-
                                 android:textAlignment="center"
+                                android:textColor="@color/black"
                                 android:textSize="21sp"
                                 android:textStyle="bold"
                                 app:layout_constraintBottom_toBottomOf="parent"
@@ -97,13 +98,14 @@
 
                             <TextView
                                 android:id="@+id/minTv"
-
                                 android:layout_width="match_parent"
+
                                 android:layout_height="match_parent"
                                 android:background="@drawable/digital_clock_bg"
                                 android:gravity="center"
                                 android:text="00"
                                 android:textAlignment="center"
+                                android:textColor="@color/black"
                                 android:textSize="21sp"
                                 android:textStyle="bold" />
                         </androidx.cardview.widget.CardView>
@@ -123,6 +125,8 @@
                                 android:gravity="center"
                                 android:text="00"
                                 android:textAlignment="center"
+
+                                android:textColor="@color/black"
                                 android:textSize="21sp"
                                 android:textStyle="bold" />
                         </androidx.cardview.widget.CardView>
@@ -143,10 +147,12 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:background="@color/white"
                             android:gravity="center"
                             android:paddingHorizontal="40dp"
                             android:paddingVertical="12dp"
                             android:text="10:00 AM to 07:00 PM"
+                            android:textColor="@color/black"
                             android:textStyle="bold" />
 
                     </androidx.cardview.widget.CardView>
@@ -221,6 +227,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginTop="3dp"
+                android:background="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
