--- a/app/src/main/res/layout/holiday_layout.xml
+++ b/app/src/main/res/layout/holiday_layout.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="5dp"
+    android:background="@color/white"
     android:paddingHorizontal="8dp">
 
     <androidx.cardview.widget.CardView
@@ -20,6 +21,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/white"
+
             android:orientation="vertical"
             android:padding="13dp">
 
