--- a/app/src/main/res/layout/rv_month_attendance_layout.xml
+++ b/app/src/main/res/layout/rv_month_attendance_layout.xml
@@ -3,11 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="100dp"
+    android:background="@color/white"
     android:orientation="horizontal"
     android:weightSum="3">
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:background="@color/white"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:weightSum="3">
@@ -28,6 +30,7 @@
                 android:layout_gravity="center"
                 android:orientation="vertical"
                 android:padding="13dp"
+                android:background="@color/white"
                 android:weightSum="2">
 
                 <TextView
