--- a/app/src/main/res/layout/popup_overtime.xml
+++ b/app/src/main/res/layout/popup_overtime.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
         android:layout_marginTop="3dp"
+        android:textColorHint="@color/txtGray"
         android:background="@drawable/bg_blue_corner"
         android:clickable="false"
         android:drawableEnd="@drawable/ic_clock"
@@ -46,6 +47,7 @@
         android:drawableEnd="@drawable/ic_clock"
         android:drawablePadding="15dp"
         android:hint="to"
+        android:textColorHint="@color/txtGray"
         android:padding="5dp"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -64,6 +66,7 @@
         android:textAlignment="textStart"
         android:clickable="false"
         android:editable="false"
+        android:textColorHint="@color/txtGray"
         android:hint="enter amount....."
         android:inputType="numberDecimal"
         android:padding="5dp"
@@ -92,6 +95,7 @@
         android:background="@drawable/bg_blue_corner"
         android:clickable="false"
         android:drawableEnd="@drawable/ic_clock"
+        android:textColorHint="@color/txtGray"
         android:drawablePadding="15dp"
         android:editable="false"
         android:hint="from"
@@ -115,7 +119,7 @@
         android:drawablePadding="15dp"
         android:editable="false"
         android:hint="to"
-
+        android:textColorHint="@color/txtGray"
         android:padding="5dp"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -133,6 +137,7 @@
         android:background="@drawable/bg_blue_corner"
         android:clickable="false"
         android:editable="false"
+        android:textColorHint="@color/txtGray"
         android:gravity="start|center_vertical"
         android:textAlignment="textStart"
         android:hint="enter amount....."
