--- a/app/src/main/res/layout/holiday_layout.xml
+++ b/app/src/main/res/layout/holiday_layout.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:layout_marginVertical="5dp"
     android:paddingHorizontal="8dp">
 
@@ -21,6 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:background="@color/white"
             android:padding="13dp">
 
             <TextView
