--- a/app/src/main/res/layout/rv_month_attendance_layout.xml
+++ b/app/src/main/res/layout/rv_month_attendance_layout.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="100dp"
     android:orientation="horizontal"
     android:weightSum="3">
@@ -26,6 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:background="@color/white"
                 android:orientation="vertical"
                 android:padding="13dp"
                 android:weightSum="2">
