--- a/app/src/main/res/layout/slider_screen.xml
+++ b/app/src/main/res/layout/slider_screen.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -17,6 +18,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/sliderTitle"
         android:text="Upload a video"
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:textAlignment="center"
         android:textStyle="bold"
@@ -26,6 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/sliderDesc"
+        android:textColor="@color/black"
         android:layout_marginHorizontal="15dp"
         android:text="@string/screen1desc"
         android:textSize="14sp"
