--- a/app/src/main/res/layout/popup_overtime.xml
+++ b/app/src/main/res/layout/popup_overtime.xml
@@ -148,22 +148,22 @@
         app:layout_constraintStart_toStartOf="@id/thirdTv"
         app:layout_constraintTop_toBottomOf="@id/thirdTv" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/submitBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="15dp"
-        android:background="@drawable/login_btn_bg"
-        android:paddingHorizontal="40dp"
-        android:text="Submit"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/secondAmountEt" />
+<!--    <androidx.appcompat.widget.AppCompatButton-->
+<!--        android:id="@+id/submitBtn"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginHorizontal="20dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:layout_marginBottom="15dp"-->
+<!--        android:background="@drawable/login_btn_bg"-->
+<!--        android:paddingHorizontal="40dp"-->
+<!--        android:text="Submit"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:textStyle="bold"-->
+<!--        android:visibility="gone"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/secondAmountEt" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
