--- a/app/src/main/res/layout/rv_event_layout.xml
+++ b/app/src/main/res/layout/rv_event_layout.xml
@@ -6,7 +6,6 @@
     android:layout_height="wrap_content"
     android:layout_margin="3dp"
     android:background="@color/white"
-    android:elevation="3dp"
     android:padding="1dp">
 
     <ImageView
@@ -22,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/txtDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -34,16 +33,19 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/txtEventName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
         android:text="Birthday Party"
+        android:maxLength="25"
         android:textColor="@color/black"
-        android:textSize="14sp"
+        android:textSize="13sp"
         android:textStyle="bold"
+        android:inputType="textMultiLine"
+
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/txtDate" />
 
     <TextView
         android:id="@+id/textView5"
@@ -55,14 +57,14 @@
         android:textSize="10sp"
         android:textStyle="normal"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/txtEventName" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl2"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginTop="2dp"
-        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintStart_toStartOf="@+id/txtEventName"
         app:layout_constraintTop_toBottomOf="@+id/textView5">
 
         <ImageView
