--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -259,7 +259,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/uploadPhotosCard" />
 
                 <EditText
-                    android:id="@+id/locationEt"
+                    android:id="@+id/location_ET"
                     android:layout_width="match_parent"
                     android:layout_height="42dp"
                     android:layout_marginHorizontal="15dp"
@@ -286,7 +286,7 @@
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/locationEt" />
+                    app:layout_constraintTop_toBottomOf="@+id/location_ET" />
 
                 <EditText
                     android:id="@+id/descriptionEt"
