--- a/app/src/main/res/layout/rv_event_layout.xml
+++ b/app/src/main/res/layout/rv_event_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card"
+    android:id="@+id/cardEvent"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="3dp"
@@ -37,12 +37,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
-        android:text="Birthday Party"
+        android:inputType="textMultiLine"
         android:maxLength="25"
+        android:text="Birthday Party"
         android:textColor="@color/black"
         android:textSize="13sp"
         android:textStyle="bold"
-        android:inputType="textMultiLine"
 
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/txtDate" />
@@ -116,17 +116,18 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
+        android:id="@+id/interested"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:background="@drawable/accept_btn_bg"
         android:gravity="center_horizontal|center_vertical"
         android:paddingHorizontal="7dp"
-        android:text="Intrastate"
+        android:text="Interested"
         android:textAlignment="gravity"
         android:textColor="@color/white"
         android:textSize="10sp"
         android:textStyle="normal"
-        android:visibility="gone"
+
         app:layout_constraintBottom_toBottomOf="@+id/cl2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cl2"
