--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -62,12 +62,22 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/damru">
 
+                        <DigitalClock
+                            android:id="@+id/digitalClock"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/black"
+                            android:text="DigitalClock"
+                            android:textSize="30dp"
+                            android:visibility="gone" />
+
+
                         <androidx.cardview.widget.CardView
+                            android:id="@+id/card1"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:layout_margin="5dp"
                             app:cardCornerRadius="12dp"
-
                             app:cardElevation="2dp">
 
 
@@ -90,6 +100,7 @@
                         </androidx.cardview.widget.CardView>
 
                         <androidx.cardview.widget.CardView
+                            android:id="@+id/card2"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:layout_margin="5dp"
@@ -111,6 +122,7 @@
                         </androidx.cardview.widget.CardView>
 
                         <androidx.cardview.widget.CardView
+                            android:id="@+id/card3"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:layout_margin="5dp"
