--- a/app/src/main/res/layout/fragment_payslip.xml
+++ b/app/src/main/res/layout/fragment_payslip.xml
@@ -82,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="1dp"
-                android:text="Department - UIUX Designer"
+                android:text="Department :-"
                 android:textColor="#02141F"
                 android:textSize="16sp"
                 android:textStyle="normal"
@@ -96,7 +96,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="1dp"
-                android:text="Designation - IT"
+                android:text="Designation :-"
                 android:textColor="#02141F"
                 android:textSize="16sp"
                 android:textStyle="normal"
