--- a/app/src/main/res/layout/fragment_payslip.xml
+++ b/app/src/main/res/layout/fragment_payslip.xml
@@ -82,6 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="1dp"
+                android:visibility="gone"
                 android:text="Department :-"
                 android:textColor="#02141F"
                 android:textSize="16sp"
@@ -98,6 +99,7 @@
                 android:layout_marginTop="1dp"
                 android:text="Designation :-"
                 android:textColor="#02141F"
+                android:visibility="gone"
                 android:textSize="16sp"
                 android:textStyle="normal"
                 app:layout_constraintBottom_toBottomOf="@+id/dp_img"
